[gd_scene load_steps=35 format=3 uid="uid://ddjn4lk6mcp3k"]

[ext_resource type="Script" path="res://editor/main_editor/editor.gd" id="1_n4qnf"]
[ext_resource type="Script" path="res://editor/main_editor/scroll_container_improver.gd" id="2_jw8xc"]
[ext_resource type="Script" path="res://editor/main_editor/level_container.gd" id="2_kqd34"]
[ext_resource type="PackedScene" uid="uid://doxgx8n20sjl0" path="res://level_elements/gameplay.tscn" id="4_a2tib"]
[ext_resource type="PackedScene" uid="uid://h5opptcugh0i" path="res://level_elements/doors_locks/door.tscn" id="5_55fwv"]
[ext_resource type="PackedScene" uid="uid://b0dwb73yoj3sr" path="res://level_elements/keys/key.tscn" id="6_n53nq"]
[ext_resource type="PackedScene" uid="uid://dh01y4njdul08" path="res://level_elements/hover_highlight.tscn" id="7_8vfxp"]
[ext_resource type="PackedScene" uid="uid://d4bjx48o6bjgf" path="res://level_elements/entries/entry.tscn" id="7_46nwx"]
[ext_resource type="PackedScene" uid="uid://dqsf6y71ncn36" path="res://editor/side_editors/door_editor/door_editor.tscn" id="8_5qjay"]
[ext_resource type="PackedScene" uid="uid://ctxog6bj0oha7" path="res://level_elements/salvages/salvage_point.tscn" id="8_8di3k"]
[ext_resource type="Script" path="res://data/complex_number.gd" id="9_0kc5k"]
[ext_resource type="Script" path="res://editor/main_editor/level_outline.gd" id="9_r4glf"]
[ext_resource type="Script" path="res://data/lock_data.gd" id="10_f1apr"]
[ext_resource type="Script" path="res://level_elements/camera_dragger.gd" id="10_nd33d"]
[ext_resource type="Script" path="res://data/door_data.gd" id="11_psli5"]
[ext_resource type="PackedScene" uid="uid://qk8x2wvdqp7i" path="res://editor/side_editors/key_editor/key_editor.tscn" id="12_cr7ft"]
[ext_resource type="Script" path="res://data/key_data.gd" id="13_tk2t1"]
[ext_resource type="PackedScene" uid="uid://bq8lnotf0ys0p" path="res://editor/side_editors/level_properties_editor/level_properties_editor.tscn" id="14_dug7w"]
[ext_resource type="PackedScene" uid="uid://cfwk45t0p1omu" path="res://editor/main_editor/invalid_level_load_window.tscn" id="16_ayc8p"]
[ext_resource type="PackedScene" uid="uid://hasnbvkv25y8" path="res://editor/side_editors/entry_editor/entry_editor.tscn" id="17_ncfu0"]
[ext_resource type="PackedScene" uid="uid://biuhl87mkufly" path="res://editor/bookmark_tab_container/bookmark_tab_container.tscn" id="20_4gm0f"]
[ext_resource type="PackedScene" uid="uid://bloqrx3o1b3c3" path="res://editor/side_editors/salvage_editor/salvage_point_editor.tscn" id="21_ieeor"]
[ext_resource type="Script" path="res://data/entry_data.gd" id="21_uoxo3"]
[ext_resource type="Script" path="res://data/salvage_point_data.gd" id="22_djptt"]
[ext_resource type="PackedScene" uid="uid://ccum746wsrcl8" path="res://editor/side_editors/settings_editor/settings_editor.tscn" id="24_hjg5q"]

[sub_resource type="Resource" id="Resource_k5lmb"]
script = ExtResource("9_0kc5k")
real_part = 1
imaginary_part = 0

[sub_resource type="Resource" id="Resource_jn77e"]
script = ExtResource("13_tk2t1")
amount = SubResource("Resource_k5lmb")
is_infinite = false
type = 0
color = 1
position = Vector2i(0, 0)

[sub_resource type="Resource" id="Resource_72h7r"]
script = ExtResource("9_0kc5k")
real_part = 1
imaginary_part = 0

[sub_resource type="Resource" id="Resource_n0ml7"]
script = ExtResource("10_f1apr")
color = 1
magnitude = 1
sign = 0
value_type = 0
lock_type = 0
size = Vector2i(18, 18)
position = Vector2i(7, 7)
lock_arrangement = 0
dont_show_lock = false

[sub_resource type="Resource" id="Resource_ltowg"]
script = ExtResource("11_psli5")
amount = SubResource("Resource_72h7r")
outer_color = 1
locks = Array[ExtResource("10_f1apr")]([SubResource("Resource_n0ml7")])
position = Vector2i(0, 0)
size = Vector2i(32, 32)
_curses = {
0: false,
1: false,
2: false,
3: false
}
glitch_color = 13
sid = -1

[sub_resource type="Resource" id="Resource_cem3d"]
script = ExtResource("9_0kc5k")
real_part = 1
imaginary_part = 0

[sub_resource type="Resource" id="Resource_6r0li"]
script = ExtResource("13_tk2t1")
amount = SubResource("Resource_cem3d")
is_infinite = false
type = 0
color = 1
position = Vector2i(0, 0)

[sub_resource type="Resource" id="Resource_1njv5"]
script = ExtResource("21_uoxo3")
position = Vector2i(0, 0)
leads_to = 0
skin = 0

[sub_resource type="Resource" id="Resource_6sbe5"]
script = ExtResource("22_djptt")
sid = 0
is_output = false
position = Vector2i(0, 0)

[node name="Editor" type="Control" node_paths=PackedStringArray("gameplay", "right_dock", "side_tabs", "door_editor", "key_editor", "tile_editor", "level_properties_editor", "entry_editor", "salvage_point_editor", "level_container", "play_button", "save_button", "save_as_button", "download_button", "load_button", "load_from_clipboard_button", "level_path_displayer", "open_files_location", "new_level_button", "more_options", "file_dialog", "invalid_level_dialog")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n4qnf")
gameplay = NodePath("HSplitContainer/LeftSide/LevelContainer/LevelContainerInner/SubViewportContainer/SubViewport/Gameplay")
right_dock = NodePath("HSplitContainer/RightDock")
side_tabs = NodePath("HSplitContainer/RightDock/BookmarkTabContainer")
door_editor = NodePath("HSplitContainer/RightDock/BookmarkTabContainer/Doors")
key_editor = NodePath("HSplitContainer/RightDock/BookmarkTabContainer/Keys")
tile_editor = NodePath("HSplitContainer/RightDock/BookmarkTabContainer/Tiles")
level_properties_editor = NodePath("HSplitContainer/RightDock/BookmarkTabContainer/Level")
entry_editor = NodePath("HSplitContainer/RightDock/BookmarkTabContainer/Entries")
salvage_point_editor = NodePath("HSplitContainer/RightDock/BookmarkTabContainer/SalvagePoints")
level_container = NodePath("HSplitContainer/LeftSide/LevelContainer")
play_button = NodePath("HSplitContainer/LeftSide/Tools/ScrollContainerImprover/ScrollContainer/HBoxContainer/Play")
save_button = NodePath("HSplitContainer/LeftSide/Tools/ScrollContainerImprover/ScrollContainer/HBoxContainer/Save")
save_as_button = NodePath("HSplitContainer/LeftSide/Tools/ScrollContainerImprover/ScrollContainer/HBoxContainer/SaveAs")
download_button = NodePath("HSplitContainer/LeftSide/Tools/ScrollContainerImprover/ScrollContainer/HBoxContainer/Download")
load_button = NodePath("HSplitContainer/LeftSide/Tools/ScrollContainerImprover/ScrollContainer/HBoxContainer/Load")
load_from_clipboard_button = NodePath("HSplitContainer/LeftSide/Tools/ScrollContainerImprover/ScrollContainer/HBoxContainer/LoadFromClipboard")
level_path_displayer = NodePath("HSplitContainer/LeftSide/Tools/ScrollContainerImprover/ScrollContainer/HBoxContainer/LevelPath")
open_files_location = NodePath("HSplitContainer/LeftSide/Tools/ScrollContainerImprover/ScrollContainer/HBoxContainer/OpenFilesLocation")
new_level_button = NodePath("HSplitContainer/LeftSide/Tools/ScrollContainerImprover/ScrollContainer/HBoxContainer/NewLevel")
more_options = NodePath("HSplitContainer/LeftSide/Tools/ScrollContainerImprover/ScrollContainer/HBoxContainer/MoreOptions")
file_dialog = NodePath("FileDialog")
invalid_level_dialog = NodePath("InvalidLevelLoad")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
dragger_visibility = 2

[node name="LeftSide" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Tools" type="MarginContainer" parent="HSplitContainer/LeftSide"]
layout_mode = 2

[node name="ScrollContainerImprover" type="Container" parent="HSplitContainer/LeftSide/Tools"]
layout_mode = 2
script = ExtResource("2_jw8xc")

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/LeftSide/Tools/ScrollContainerImprover"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/LeftSide/Tools/ScrollContainerImprover/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="Play" type="Button" parent="HSplitContainer/LeftSide/Tools/ScrollContainerImprover/ScrollContainer/HBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Save" type="Button" parent="HSplitContainer/LeftSide/Tools/ScrollContainerImprover/ScrollContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="SaveAs" type="Button" parent="HSplitContainer/LeftSide/Tools/ScrollContainerImprover/ScrollContainer/HBoxContainer"]
layout_mode = 2
text = "Save As..."

[node name="Download" type="Button" parent="HSplitContainer/LeftSide/Tools/ScrollContainerImprover/ScrollContainer/HBoxContainer"]
visible = false
layout_mode = 2
text = "Download"

[node name="Load" type="Button" parent="HSplitContainer/LeftSide/Tools/ScrollContainerImprover/ScrollContainer/HBoxContainer"]
layout_mode = 2
text = "Load"

[node name="LoadFromClipboard" type="Button" parent="HSplitContainer/LeftSide/Tools/ScrollContainerImprover/ScrollContainer/HBoxContainer"]
layout_mode = 2
text = "Load from Clipboard"

[node name="NewLevel" type="Button" parent="HSplitContainer/LeftSide/Tools/ScrollContainerImprover/ScrollContainer/HBoxContainer"]
layout_mode = 2
text = "New Level"

[node name="OpenFilesLocation" type="Button" parent="HSplitContainer/LeftSide/Tools/ScrollContainerImprover/ScrollContainer/HBoxContainer"]
layout_mode = 2
text = "Open Level Files Location"

[node name="MoreOptions" type="MenuButton" parent="HSplitContainer/LeftSide/Tools/ScrollContainerImprover/ScrollContainer/HBoxContainer"]
visible = false
layout_mode = 2
text = "More..."

[node name="LevelPath" type="LineEdit" parent="HSplitContainer/LeftSide/Tools/ScrollContainerImprover/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "res://fgsdfgsdfgt.tres"
alignment = 1
editable = false
expand_to_text_length = true
context_menu_enabled = false

[node name="LevelContainer" type="Control" parent="HSplitContainer/LeftSide" node_paths=PackedStringArray("inner_container", "gameplay", "level_viewport", "ghost_door", "ghost_key", "ghost_entry", "ghost_salvage_point", "editor", "danger_highlight", "selected_highlight", "camera_dragger", "editor_camera")]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_kqd34")
inner_container = NodePath("LevelContainerInner")
gameplay = NodePath("LevelContainerInner/SubViewportContainer/SubViewport/Gameplay")
level_viewport = NodePath("LevelContainerInner/SubViewportContainer/SubViewport")
ghost_door = NodePath("LevelContainerInner/SubViewportContainer/SubViewport/Gameplay/CanvasGroup/GhostDoor")
ghost_key = NodePath("LevelContainerInner/SubViewportContainer/SubViewport/Gameplay/CanvasGroup/GhostKey")
ghost_entry = NodePath("LevelContainerInner/SubViewportContainer/SubViewport/Gameplay/CanvasGroup/GhostEntry")
ghost_salvage_point = NodePath("LevelContainerInner/SubViewportContainer/SubViewport/Gameplay/CanvasGroup/GhostSalvagePoint")
editor = NodePath("../../..")
danger_highlight = NodePath("LevelContainerInner/SubViewportContainer/SubViewport/Gameplay/DangerHighlight")
selected_highlight = NodePath("LevelContainerInner/SubViewportContainer/SubViewport/Gameplay/SelectedHighlight")
camera_dragger = NodePath("LevelContainerInner/SubViewportContainer/SubViewport/CameraDragger")
editor_camera = NodePath("LevelContainerInner/SubViewportContainer/SubViewport/EditorCamera")

[node name="Panel" type="Panel" parent="HSplitContainer/LeftSide/LevelContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="HSplitContainer/LeftSide/LevelContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.0823529)

[node name="LevelContainerInner" type="Control" parent="HSplitContainer/LeftSide/LevelContainer"]
clip_contents = true
layout_mode = 1
anchors_preset = 0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="HSplitContainer/LeftSide/LevelContainer/LevelContainerInner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.54902, 0.54902, 0.54902, 1)

[node name="SubViewportContainer" type="SubViewportContainer" parent="HSplitContainer/LeftSide/LevelContainer/LevelContainerInner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="HSplitContainer/LeftSide/LevelContainer/LevelContainerInner/SubViewportContainer"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
positional_shadow_atlas_size = 0
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="ColorRect" type="ColorRect" parent="HSplitContainer/LeftSide/LevelContainer/LevelContainerInner/SubViewportContainer/SubViewport"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Gameplay" parent="HSplitContainer/LeftSide/LevelContainer/LevelContainerInner/SubViewportContainer/SubViewport" instance=ExtResource("4_a2tib")]

[node name="CanvasGroup" type="CanvasGroup" parent="HSplitContainer/LeftSide/LevelContainer/LevelContainerInner/SubViewportContainer/SubViewport/Gameplay"]
self_modulate = Color(1, 1, 1, 0.498039)

[node name="GhostDoor" parent="HSplitContainer/LeftSide/LevelContainer/LevelContainerInner/SubViewportContainer/SubViewport/Gameplay/CanvasGroup" instance=ExtResource("5_55fwv")]
visible = false
mouse_filter = 2

[node name="GhostKey" parent="HSplitContainer/LeftSide/LevelContainer/LevelContainerInner/SubViewportContainer/SubViewport/Gameplay/CanvasGroup" instance=ExtResource("6_n53nq")]
data = SubResource("Resource_jn77e")
metadata/_edit_vertical_guides_ = [32.0]
metadata/_edit_horizontal_guides_ = [32.0]

[node name="GhostEntry" parent="HSplitContainer/LeftSide/LevelContainer/LevelContainerInner/SubViewportContainer/SubViewport/Gameplay/CanvasGroup" instance=ExtResource("7_46nwx")]
visible = false
mouse_filter = 2

[node name="GhostSalvagePoint" parent="HSplitContainer/LeftSide/LevelContainer/LevelContainerInner/SubViewportContainer/SubViewport/Gameplay/CanvasGroup" instance=ExtResource("8_8di3k")]
visible = false

[node name="SelectedHighlight" parent="HSplitContainer/LeftSide/LevelContainer/LevelContainerInner/SubViewportContainer/SubViewport/Gameplay" instance=ExtResource("7_8vfxp")]
color = Color(1, 1, 1, 1)
width = 3

[node name="DangerHighlight" parent="HSplitContainer/LeftSide/LevelContainer/LevelContainerInner/SubViewportContainer/SubViewport/Gameplay" instance=ExtResource("7_8vfxp")]
color = Color(1, 0, 0, 0.74902)

[node name="LevelOutline" type="Node2D" parent="HSplitContainer/LeftSide/LevelContainer/LevelContainerInner/SubViewportContainer/SubViewport/Gameplay"]
script = ExtResource("9_r4glf")

[node name="CameraDragger" type="Node2D" parent="HSplitContainer/LeftSide/LevelContainer/LevelContainerInner/SubViewportContainer/SubViewport" node_paths=PackedStringArray("camera")]
script = ExtResource("10_nd33d")
camera = NodePath("../EditorCamera")

[node name="EditorCamera" type="Camera2D" parent="HSplitContainer/LeftSide/LevelContainer/LevelContainerInner/SubViewportContainer/SubViewport"]
anchor_mode = 0

[node name="RightDock" type="MarginContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(362, 0)
layout_mode = 2

[node name="BookmarkTabContainer" parent="HSplitContainer/RightDock" instance=ExtResource("20_4gm0f")]
custom_minimum_size = Vector2(345, 0)
layout_mode = 2

[node name="Doors" parent="HSplitContainer/RightDock/BookmarkTabContainer" instance=ExtResource("8_5qjay")]
layout_mode = 2
data = SubResource("Resource_ltowg")

[node name="Keys" parent="HSplitContainer/RightDock/BookmarkTabContainer" instance=ExtResource("12_cr7ft")]
visible = false
layout_mode = 2
data = SubResource("Resource_6r0li")

[node name="Tiles" type="MarginContainer" parent="HSplitContainer/RightDock/BookmarkTabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/RightDock/BookmarkTabContainer/Tiles"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/RightDock/BookmarkTabContainer/Tiles/VBoxContainer"]
layout_mode = 2
text = "Nothing here (yet?), but you still need to select this tab to edit tiles."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Entries" parent="HSplitContainer/RightDock/BookmarkTabContainer" instance=ExtResource("17_ncfu0")]
visible = false
layout_mode = 2
data = SubResource("Resource_1njv5")

[node name="SalvagePoints" parent="HSplitContainer/RightDock/BookmarkTabContainer" instance=ExtResource("21_ieeor")]
visible = false
layout_mode = 2
data = SubResource("Resource_6sbe5")

[node name="Level" parent="HSplitContainer/RightDock/BookmarkTabContainer" instance=ExtResource("14_dug7w")]
visible = false
layout_mode = 2

[node name="Settings" parent="HSplitContainer/RightDock/BookmarkTabContainer" instance=ExtResource("24_hjg5q")]
visible = false
layout_mode = 2

[node name="FileDialog" type="FileDialog" parent="."]
size = Vector2i(356, 154)
exclusive = false
popup_window = true
extend_to_title = true
access = 1
root_subfolder = "levels"
show_hidden_files = true

[node name="InvalidLevelLoad" parent="." instance=ExtResource("16_ayc8p")]
position = Vector2i(10, 35)
size = Vector2i(477, 956)
visible = false
